lexer: A more elaborate test sample

--- a/sample.toml
+++ b/sample.toml
@@ -31,3 +31,36 @@ hosts = [
   "alpha",
   "omega"
 ]
+
+str_multiline = """
+Roses are red
+Violets are blue"""
+
+str_quoted = "I'm a string. \"You can quote me\". Name\tJos\u00E9\nLocation\tSF."
+
+str2 = """
+The quick brown \
+
+
+  fox jumps over \
+    the lazy dog."""
+
+key3 = """\
+       The quick brown \
+       fox jumps over \
+       the lazy dog.\
+       """
+
+# What you see is what you get.
+winpath  = 'C:\Users\nodejs\templates'
+winpath2 = '\\ServerX\admin$\system32\'
+quoted   = 'Tom "Dubs" Preston-Werner'
+regex    = '<\i\c*\s*>'
+
+regex2 = '''I [dw]on't need \d{2} apples'''
+lines  = '''
+The first newline is
+trimmed in raw strings.
+   All other whitespace
+   is preserved.
+'''
