--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,11 @@ install: "pip install -r requirements.txt"
 # command to run tests
 script: nosetests
 
-webhooks:
-  urls:
-    - https://webhooks.gitter.im/e/0ca6f1a824e3f5200418
-  on_success: change  # options: [always|never|change] default: always
-  on_failure: always  # options: [always|never|change] default: always
-  on_start: false     # default: false
+notifications:
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/0ca6f1a824e3f5200418
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: false     # default: false
 
