--- a/sample.toml
+++ b/sample.toml
@@ -65,11 +65,25 @@ trimmed in raw strings.
    is preserved.
 '''
 
+
 [[fruit]]
   name = "apple"
 
+  [fruit.physical]
+    color = "red"
+    shape = "round"
+
   [[fruit.variety]]
     name = "red delicious"
+
+  [[fruit.variety]]
+    name = "granny smith"
+
+[[fruit]]
+  name = "banana"
+
+  [[fruit.variety]]
+    name = "plantain"
 
 
 points = [ { x = 1, y = 2, z = 3 },
