--- a/sample.toml
+++ b/sample.toml
@@ -86,6 +86,8 @@ trimmed in raw strings.
     name = "plantain"
 
 
-points = [ { x = 1, y = 2, z = 3 },
+points = [ { x = 1, y = 2, z = 3 },         # This value is so special to me
            { x = 7, y = 8, z = 9 },
            { x = 2, y = 4, z = 8 } ]
+
+
