--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
 # command to install dependencies
 install: "pip install ."
 # command to run tests
-script: nosetests
+script: nosetests --with-doctest
 
 notifications:
   webhooks:
